@@ -9,13 +9,14 @@ import com.nighthawk.aetha_backend.entity.Genres;
 import com.nighthawk.aetha_backend.entity.Tags;
 import com.nighthawk.aetha_backend.repository.AuthUserRepository;
 import com.nighthawk.aetha_backend.repository.EbookExternalRepository;
+import com.nighthawk.aetha_backend.repository.SearchRepository;
 import com.nighthawk.aetha_backend.utils.EncryptionUtil;
 import com.nighthawk.aetha_backend.utils.FileUploadUtil;
 import com.nighthawk.aetha_backend.utils.VarList;
+import com.nighthawk.aetha_backend.utils.predefined.ContentStatus;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
-import org.springframework.data.domain.Sort;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -44,6 +45,9 @@ public class EbookExternalService {
 
     @Autowired
     private AuthUserRepository userRepository;
+
+    @Autowired
+    private SearchRepository searchRepository;
 
     private static final String ISBN_PATTERN = "978-\\d{3}-\\d{4}-\\d{2}-\\d{1}";
 
@@ -129,6 +133,7 @@ public class EbookExternalService {
 
             newBook.setSold_amount(0);
             newBook.setPrice(Double.valueOf(ebook.getPrice()));
+            newBook.setStatus(ContentStatus.PENDING);
 
             if (!isValidISBN(ebook.getIsbn())) {
                 errors.put("isbn", "Invalid ISBN format Eg: 978-123-1234-12-1");
@@ -253,18 +258,47 @@ public class EbookExternalService {
                 .collect(Collectors.toList());
     }
 
-    public List<EbookExternalDTO> findAllBooksSorted(String field, String order) {
+    public ResponseDTO findMyBooks(UserDetails userDetails) {
+        AuthUser user = userRepository.findByEmail(userDetails.getUsername()).orElse(null);
 
-        List<EbookExternal> ebooks = Objects.equals(order, "ASC")
-                ? ebookRepository.findAll(Sort.by(Sort.Direction.ASC, field))
-                : ebookRepository.findAll(Sort.by(Sort.Direction.DESC, field));
+        if(user == null) {
+            responseDTO.setCode(VarList.RSP_TOKEN_INVALID);
+            responseDTO.setMessage("User not found");
+            responseDTO.setContent(null);
+        } else {
+            try {
+                List<EbookExternal> ebooks = ebookRepository.findByAuthor(user);
 
-        // ! TODO - Unknown Content
-        return ebooks.stream()
-                .map(ebook -> modelMapper.typeMap(EbookExternal.class, EbookExternalDTO.class)
-                        .addMappings(mapper -> mapper.map(src -> src.getAuthor().getDisplayName(), EbookExternalDTO::setAuthor))
-                        .map(ebook))
-                .collect(Collectors.toList());
+                List<EbookExternalDTO> myEbooks = ebooks.stream()
+                        .map(ebook -> modelMapper.typeMap(EbookExternal.class, EbookExternalDTO.class)
+                                .addMappings(mapper -> mapper.map(src -> src.getAuthor().getDisplayName(), EbookExternalDTO::setAuthor))
+                                .map(ebook))
+                        .toList();
+
+                responseDTO.setCode(VarList.RSP_SUCCESS);
+                responseDTO.setContent(myEbooks);
+
+                if(myEbooks.isEmpty()) responseDTO.setMessage("No books found");
+                else responseDTO.setMessage("Books found");
+
+            } catch (Exception e) {
+                responseDTO.setCode(VarList.RSP_FAIL);
+                responseDTO.setMessage("Error fetching books");
+                responseDTO.setContent(null);
+            }
+        }
+
+        return responseDTO;
+    }
+
+    public List<EbookExternalDTO> filterEbooks(RequestDTO requestDTO) {
+
+        // Execute the query
+        return searchRepository.searchEbooks(
+                requestDTO.getSearchTerm(),
+                requestDTO.getGenres(),
+                requestDTO.getRating()
+        );
     }
 
     @Transactional
@@ -435,6 +469,10 @@ public class EbookExternalService {
         }
         if (book.getFeedback() != null) {
             ebook.setFeedback(book.getFeedback());
+        }
+
+        if (book.getStatus() != null) {
+            ebook.setStatus(book.getStatus());
         }
 
         if(book.getAuthor().getId().equals(user.getId())) {
